[package]
name = "rustyrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"

[profile.test]
incremental = true
debug = "full"
strip = "none"
opt-level = 3
lto = "thin"

[profile.release]
incremental = false
strip = "symbols"
debug = "none"
opt-level = 3
lto = "fat"
