[package]
name = "rustyrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.7"
sdl2 = "0.36.0"

[profile.test]
incremental = true
debug = true
strip = "none"
opt-level = 3
lto = "none"

[profile.release]
incremental = false
strip = "symbols"
debug = false
opt-level = 3
lto = "fat"
